m19/m19_parser.output
   0  $accept : file $end

   1  file :
   2       | decls

   3  decls : declaration
   4        | decls declaration

   5  declaration : var_decls ';'
   6              | function

   7  var_decls : variable
   8            | var_decl

   9  variable : data_type tIDENTIFIER '?' '=' expr
  10           | data_type tIDENTIFIER '?'
  11           | data_type tIDENTIFIER '!' '=' expr
  12           | data_type tIDENTIFIER '!'

  13  var_decl : data_type tIDENTIFIER '=' expr
  14           | data_type tIDENTIFIER

  15  data_type : '#'
  16            | '%'
  17            | '$'
  18            | '<' data_type '>'

  19  function : data_type tIDENTIFIER '?' '(' func_args ')'
  20           | '!' tIDENTIFIER '?' '(' func_args ')'
  21           | data_type tIDENTIFIER '!' '(' func_args ')'
  22           | '!' tIDENTIFIER '!' '(' func_args ')'
  23           | data_type tIDENTIFIER '(' func_args ')'
  24           | '!' tIDENTIFIER '(' func_args ')'
  25           | '!' tIDENTIFIER '!' '(' func_args ')' body
  26           | data_type tIDENTIFIER '!' '(' func_args ')' '=' literal body
  27           | data_type tIDENTIFIER '!' '(' func_args ')' body
  28           | '!' tIDENTIFIER '(' func_args ')' body
  29           | data_type tIDENTIFIER '(' func_args ')' '=' literal body
  30           | data_type tIDENTIFIER '(' func_args ')' body

  31  func_args : var_decl
  32            | func_args ',' var_decl
  33            |

  34  func_call : tIDENTIFIER '(' opt_expressions ')'
  35            | '@' '(' opt_expressions ')'

  36  opt_expressions :
  37                  | expressions

  38  literal : integer
  39          | string
  40          | real

  41  integer : tINTEGER

  42  real : tREAL

  43  string : tSTRING
  44         | string tSTRING

  45  body : initial_section sections final_section
  46       | sections final_section
  47       | initial_section sections
  48       | initial_section final_section
  49       | sections
  50       | initial_section
  51       | final_section

  52  initial_section : tDLT code_block

  53  sections : section
  54           | sections section

  55  section : '(' opt_expr ')' code_block
  56          | '[' opt_expr ']' code_block
  57          | code_block

  58  opt_expr :
  59           | expr

  60  final_section : tDGT code_block

  61  code_block : '{' opt_instructions '}'
  62             | '{' inner_decls opt_instructions '}'

  63  inner_decls : var_decls ';'
  64              | inner_decls var_decls ';'

  65  opt_instructions :
  66                   | instrs

  67  instruction : expr ';'
  68              | expr '!'
  69              | expr tPRINTLN
  70              | tCONTINUE
  71              | tBREAK
  72              | tRETURN
  73              | conditional
  74              | iteration
  75              | code_block
  76              | tAPPLY tIDENTIFIER tSETA lval ':' expr tINTERVALO expr ';'

  77  instrs : instruction
  78         | instrs instruction

  79  conditional : '[' expr ']' '#' instruction
  80              | '[' expr ']' '?' instruction
  81              | '[' expr ']' '?' instruction ':' instruction

  82  init_iteration : var_decl
  83                 | expr
  84                 | init_iteration ',' var_decl
  85                 | init_iteration ',' expr
  86                 |

  87  iteration : '[' init_iteration ';' expressions ';' expressions ']' instruction
  88            | '[' init_iteration ';' ';' expressions ']' instruction
  89            | '[' init_iteration ';' expressions ';' ']' instruction
  90            | '[' init_iteration ';' ';' ']' instruction

  91  expressions : expr
  92              | expressions ',' expr

  93  expr : literal
  94       | '-' expr
  95       | '+' expr
  96       | expr '+' expr
  97       | expr '-' expr
  98       | expr '/' expr
  99       | expr '*' expr
 100       | expr '%' expr
 101       | expr '<' expr
 102       | expr '>' expr
 103       | '~' expr
 104       | expr tGE expr
 105       | expr tLE expr
 106       | expr tNE expr
 107       | expr tEQ expr
 108       | expr tOR expr
 109       | expr tAND expr
 110       | lval
 111       | lval '=' expr
 112       | '@' '=' expr
 113       | '[' expr ']'
 114       | lval '?'
 115       | '@' '?'
 116       | '(' expr ')'
 117       | '@'
 118       | func_call

 119  lval : tIDENTIFIER
 120       | lval '[' expr ']'
 121       | '@' '[' expr ']'
 122       | '(' expr ')' '[' expr ']'
 123       | func_call '[' expr ']'

state 0
	$accept : . file $end  (0)
	file : .  (1)

	'<'  shift 1
	'%'  shift 2
	'!'  shift 3
	'#'  shift 4
	'$'  shift 5
	$end  reduce 1

	file  goto 6
	declaration  goto 7
	function  goto 8
	variable  goto 9
	var_decl  goto 10
	var_decls  goto 11
	decls  goto 12
	data_type  goto 13


state 1
	data_type : '<' . data_type '>'  (18)

	'<'  shift 1
	'%'  shift 2
	'#'  shift 4
	'$'  shift 5
	.  error

	data_type  goto 14


state 2
	data_type : '%' .  (16)

	.  reduce 16


state 3
	function : '!' . tIDENTIFIER '?' '(' func_args ')'  (20)
	function : '!' . tIDENTIFIER '!' '(' func_args ')'  (22)
	function : '!' . tIDENTIFIER '(' func_args ')'  (24)
	function : '!' . tIDENTIFIER '!' '(' func_args ')' body  (25)
	function : '!' . tIDENTIFIER '(' func_args ')' body  (28)

	tIDENTIFIER  shift 15
	.  error


state 4
	data_type : '#' .  (15)

	.  reduce 15


state 5
	data_type : '$' .  (17)

	.  reduce 17


state 6
	$accept : file . $end  (0)

	$end  accept


state 7
	decls : declaration .  (3)

	.  reduce 3


state 8
	declaration : function .  (6)

	.  reduce 6


state 9
	var_decls : variable .  (7)

	.  reduce 7


state 10
	var_decls : var_decl .  (8)

	.  reduce 8


state 11
	declaration : var_decls . ';'  (5)

	';'  shift 16
	.  error


state 12
	file : decls .  (2)
	decls : decls . declaration  (4)

	'<'  shift 1
	'%'  shift 2
	'!'  shift 3
	'#'  shift 4
	'$'  shift 5
	$end  reduce 2

	declaration  goto 17
	function  goto 8
	variable  goto 9
	var_decl  goto 10
	var_decls  goto 11
	data_type  goto 13


state 13
	variable : data_type . tIDENTIFIER '?' '=' expr  (9)
	variable : data_type . tIDENTIFIER '?'  (10)
	variable : data_type . tIDENTIFIER '!' '=' expr  (11)
	variable : data_type . tIDENTIFIER '!'  (12)
	var_decl : data_type . tIDENTIFIER '=' expr  (13)
	var_decl : data_type . tIDENTIFIER  (14)
	function : data_type . tIDENTIFIER '?' '(' func_args ')'  (19)
	function : data_type . tIDENTIFIER '!' '(' func_args ')'  (21)
	function : data_type . tIDENTIFIER '(' func_args ')'  (23)
	function : data_type . tIDENTIFIER '!' '(' func_args ')' '=' literal body  (26)
	function : data_type . tIDENTIFIER '!' '(' func_args ')' body  (27)
	function : data_type . tIDENTIFIER '(' func_args ')' '=' literal body  (29)
	function : data_type . tIDENTIFIER '(' func_args ')' body  (30)

	tIDENTIFIER  shift 18
	.  error


state 14
	data_type : '<' data_type . '>'  (18)

	'>'  shift 19
	.  error


state 15
	function : '!' tIDENTIFIER . '?' '(' func_args ')'  (20)
	function : '!' tIDENTIFIER . '!' '(' func_args ')'  (22)
	function : '!' tIDENTIFIER . '(' func_args ')'  (24)
	function : '!' tIDENTIFIER . '!' '(' func_args ')' body  (25)
	function : '!' tIDENTIFIER . '(' func_args ')' body  (28)

	'?'  shift 20
	'!'  shift 21
	'('  shift 22
	.  error


state 16
	declaration : var_decls ';' .  (5)

	.  reduce 5


state 17
	decls : decls declaration .  (4)

	.  reduce 4


state 18
	variable : data_type tIDENTIFIER . '?' '=' expr  (9)
	variable : data_type tIDENTIFIER . '?'  (10)
	variable : data_type tIDENTIFIER . '!' '=' expr  (11)
	variable : data_type tIDENTIFIER . '!'  (12)
	var_decl : data_type tIDENTIFIER . '=' expr  (13)
	var_decl : data_type tIDENTIFIER .  (14)
	function : data_type tIDENTIFIER . '?' '(' func_args ')'  (19)
	function : data_type tIDENTIFIER . '!' '(' func_args ')'  (21)
	function : data_type tIDENTIFIER . '(' func_args ')'  (23)
	function : data_type tIDENTIFIER . '!' '(' func_args ')' '=' literal body  (26)
	function : data_type tIDENTIFIER . '!' '(' func_args ')' body  (27)
	function : data_type tIDENTIFIER . '(' func_args ')' '=' literal body  (29)
	function : data_type tIDENTIFIER . '(' func_args ')' body  (30)

	'='  shift 23
	'?'  shift 24
	'!'  shift 25
	'('  shift 26
	';'  reduce 14


state 19
	data_type : '<' data_type '>' .  (18)

	.  reduce 18


state 20
	function : '!' tIDENTIFIER '?' . '(' func_args ')'  (20)

	'('  shift 27
	.  error


state 21
	function : '!' tIDENTIFIER '!' . '(' func_args ')'  (22)
	function : '!' tIDENTIFIER '!' . '(' func_args ')' body  (25)

	'('  shift 28
	.  error


state 22
	function : '!' tIDENTIFIER '(' . func_args ')'  (24)
	function : '!' tIDENTIFIER '(' . func_args ')' body  (28)
	func_args : .  (33)

	'<'  shift 1
	'%'  shift 2
	'#'  shift 4
	'$'  shift 5
	')'  reduce 33
	','  reduce 33

	var_decl  goto 29
	func_args  goto 30
	data_type  goto 31


state 23
	var_decl : data_type tIDENTIFIER '=' . expr  (13)

	tINTEGER  shift 32
	tREAL  shift 33
	tIDENTIFIER  shift 34
	tSTRING  shift 35
	'~'  shift 36
	'+'  shift 37
	'-'  shift 38
	'('  shift 39
	'@'  shift 40
	'['  shift 41
	.  error

	string  goto 42
	expr  goto 43
	func_call  goto 44
	literal  goto 45
	integer  goto 46
	real  goto 47
	lval  goto 48


state 24
	variable : data_type tIDENTIFIER '?' . '=' expr  (9)
	variable : data_type tIDENTIFIER '?' .  (10)
	function : data_type tIDENTIFIER '?' . '(' func_args ')'  (19)

	'='  shift 49
	'('  shift 50
	';'  reduce 10


state 25
	variable : data_type tIDENTIFIER '!' . '=' expr  (11)
	variable : data_type tIDENTIFIER '!' .  (12)
	function : data_type tIDENTIFIER '!' . '(' func_args ')'  (21)
	function : data_type tIDENTIFIER '!' . '(' func_args ')' '=' literal body  (26)
	function : data_type tIDENTIFIER '!' . '(' func_args ')' body  (27)

	'='  shift 51
	'('  shift 52
	';'  reduce 12


state 26
	function : data_type tIDENTIFIER '(' . func_args ')'  (23)
	function : data_type tIDENTIFIER '(' . func_args ')' '=' literal body  (29)
	function : data_type tIDENTIFIER '(' . func_args ')' body  (30)
	func_args : .  (33)

	'<'  shift 1
	'%'  shift 2
	'#'  shift 4
	'$'  shift 5
	')'  reduce 33
	','  reduce 33

	var_decl  goto 29
	func_args  goto 53
	data_type  goto 31


state 27
	function : '!' tIDENTIFIER '?' '(' . func_args ')'  (20)
	func_args : .  (33)

	'<'  shift 1
	'%'  shift 2
	'#'  shift 4
	'$'  shift 5
	')'  reduce 33
	','  reduce 33

	var_decl  goto 29
	func_args  goto 54
	data_type  goto 31


state 28
	function : '!' tIDENTIFIER '!' '(' . func_args ')'  (22)
	function : '!' tIDENTIFIER '!' '(' . func_args ')' body  (25)
	func_args : .  (33)

	'<'  shift 1
	'%'  shift 2
	'#'  shift 4
	'$'  shift 5
	')'  reduce 33
	','  reduce 33

	var_decl  goto 29
	func_args  goto 55
	data_type  goto 31


state 29
	func_args : var_decl .  (31)

	.  reduce 31


state 30
	function : '!' tIDENTIFIER '(' func_args . ')'  (24)
	function : '!' tIDENTIFIER '(' func_args . ')' body  (28)
	func_args : func_args . ',' var_decl  (32)

	')'  shift 56
	','  shift 57
	.  error


state 31
	var_decl : data_type . tIDENTIFIER '=' expr  (13)
	var_decl : data_type . tIDENTIFIER  (14)

	tIDENTIFIER  shift 58
	.  error


state 32
	integer : tINTEGER .  (41)

	.  reduce 41


state 33
	real : tREAL .  (42)

	.  reduce 42


state 34
	func_call : tIDENTIFIER . '(' opt_expressions ')'  (34)
	lval : tIDENTIFIER .  (119)

	'('  shift 59
	tPRINTLN  reduce 119
	tINTERVALO  reduce 119
	'='  reduce 119
	':'  reduce 119
	tOR  reduce 119
	tAND  reduce 119
	tEQ  reduce 119
	'<'  reduce 119
	'>'  reduce 119
	tGE  reduce 119
	tLE  reduce 119
	tNE  reduce 119
	'+'  reduce 119
	'-'  reduce 119
	'*'  reduce 119
	'/'  reduce 119
	'%'  reduce 119
	'?'  reduce 119
	';'  reduce 119
	'!'  reduce 119
	')'  reduce 119
	','  reduce 119
	'['  reduce 119
	']'  reduce 119


state 35
	string : tSTRING .  (43)

	.  reduce 43


state 36
	expr : '~' . expr  (103)

	tINTEGER  shift 32
	tREAL  shift 33
	tIDENTIFIER  shift 34
	tSTRING  shift 35
	'~'  shift 36
	'+'  shift 37
	'-'  shift 38
	'('  shift 39
	'@'  shift 40
	'['  shift 41
	.  error

	string  goto 42
	expr  goto 60
	func_call  goto 44
	literal  goto 45
	integer  goto 46
	real  goto 47
	lval  goto 48


state 37
	expr : '+' . expr  (95)

	tINTEGER  shift 32
	tREAL  shift 33
	tIDENTIFIER  shift 34
	tSTRING  shift 35
	'~'  shift 36
	'+'  shift 37
	'-'  shift 38
	'('  shift 39
	'@'  shift 40
	'['  shift 41
	.  error

	string  goto 42
	expr  goto 61
	func_call  goto 44
	literal  goto 45
	integer  goto 46
	real  goto 47
	lval  goto 48


state 38
	expr : '-' . expr  (94)

	tINTEGER  shift 32
	tREAL  shift 33
	tIDENTIFIER  shift 34
	tSTRING  shift 35
	'~'  shift 36
	'+'  shift 37
	'-'  shift 38
	'('  shift 39
	'@'  shift 40
	'['  shift 41
	.  error

	string  goto 42
	expr  goto 62
	func_call  goto 44
	literal  goto 45
	integer  goto 46
	real  goto 47
	lval  goto 48


state 39
	expr : '(' . expr ')'  (116)
	lval : '(' . expr ')' '[' expr ']'  (122)

	tINTEGER  shift 32
	tREAL  shift 33
	tIDENTIFIER  shift 34
	tSTRING  shift 35
	'~'  shift 36
	'+'  shift 37
	'-'  shift 38
	'('  shift 39
	'@'  shift 40
	'['  shift 41
	.  error

	string  goto 42
	expr  goto 63
	func_call  goto 44
	literal  goto 45
	integer  goto 46
	real  goto 47
	lval  goto 48


state 40
	func_call : '@' . '(' opt_expressions ')'  (35)
	expr : '@' . '=' expr  (112)
	expr : '@' . '?'  (115)
	expr : '@' .  (117)
	lval : '@' . '[' expr ']'  (121)

	'='  shift 64
	'?'  shift 65
	'('  shift 66
	'['  shift 67
	tPRINTLN  reduce 117
	tINTERVALO  reduce 117
	tOR  reduce 117
	tAND  reduce 117
	tEQ  reduce 117
	'<'  reduce 117
	'>'  reduce 117
	tGE  reduce 117
	tLE  reduce 117
	tNE  reduce 117
	'+'  reduce 117
	'-'  reduce 117
	'*'  reduce 117
	'/'  reduce 117
	'%'  reduce 117
	';'  reduce 117
	'!'  reduce 117
	')'  reduce 117
	','  reduce 117
	']'  reduce 117


state 41
	expr : '[' . expr ']'  (113)

	tINTEGER  shift 32
	tREAL  shift 33
	tIDENTIFIER  shift 34
	tSTRING  shift 35
	'~'  shift 36
	'+'  shift 37
	'-'  shift 38
	'('  shift 39
	'@'  shift 40
	'['  shift 41
	.  error

	string  goto 42
	expr  goto 68
	func_call  goto 44
	literal  goto 45
	integer  goto 46
	real  goto 47
	lval  goto 48


state 42
	literal : string .  (39)
	string : string . tSTRING  (44)

	tSTRING  shift 69
	tPRINTLN  reduce 39
	tDGT  reduce 39
	tDLT  reduce 39
	tINTERVALO  reduce 39
	tOR  reduce 39
	tAND  reduce 39
	tEQ  reduce 39
	'<'  reduce 39
	'>'  reduce 39
	tGE  reduce 39
	tLE  reduce 39
	tNE  reduce 39
	'+'  reduce 39
	'-'  reduce 39
	'*'  reduce 39
	'/'  reduce 39
	'%'  reduce 39
	';'  reduce 39
	'!'  reduce 39
	'('  reduce 39
	')'  reduce 39
	','  reduce 39
	'['  reduce 39
	']'  reduce 39
	'{'  reduce 39


state 43
	var_decl : data_type tIDENTIFIER '=' expr .  (13)
	expr : expr . '+' expr  (96)
	expr : expr . '-' expr  (97)
	expr : expr . '/' expr  (98)
	expr : expr . '*' expr  (99)
	expr : expr . '%' expr  (100)
	expr : expr . '<' expr  (101)
	expr : expr . '>' expr  (102)
	expr : expr . tGE expr  (104)
	expr : expr . tLE expr  (105)
	expr : expr . tNE expr  (106)
	expr : expr . tEQ expr  (107)
	expr : expr . tOR expr  (108)
	expr : expr . tAND expr  (109)

	tOR  shift 70
	tAND  shift 71
	tEQ  shift 72
	'<'  shift 73
	'>'  shift 74
	tGE  shift 75
	tLE  shift 76
	tNE  shift 77
	'+'  shift 78
	'-'  shift 79
	'*'  shift 80
	'/'  shift 81
	'%'  shift 82
	';'  reduce 13
	')'  reduce 13
	','  reduce 13


state 44
	expr : func_call .  (118)
	lval : func_call . '[' expr ']'  (123)

	'['  shift 83
	tPRINTLN  reduce 118
	tINTERVALO  reduce 118
	tOR  reduce 118
	tAND  reduce 118
	tEQ  reduce 118
	'<'  reduce 118
	'>'  reduce 118
	tGE  reduce 118
	tLE  reduce 118
	tNE  reduce 118
	'+'  reduce 118
	'-'  reduce 118
	'*'  reduce 118
	'/'  reduce 118
	'%'  reduce 118
	';'  reduce 118
	'!'  reduce 118
	')'  reduce 118
	','  reduce 118
	']'  reduce 118


state 45
	expr : literal .  (93)

	.  reduce 93


state 46
	literal : integer .  (38)

	.  reduce 38


state 47
	literal : real .  (40)

	.  reduce 40

